--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
+    "@tanstack/react-query": "^5.85.9",
     "dayjs": "^1.11.17",
     "next": "15.5.2",
     "react": "19.1.0",
